--- a/product-view.html
+++ b/product-view.html
@@ -99,7 +99,7 @@
       "beauty-kit": {
         title: "Glow Beauty Kit",
         price: "$79",
-        img: "assets/icons/beauty-kit.jpg",
+        img: "assets/icons/beauty.jpg",
         desc: "A complete beauty set to rejuvenate your skin naturally."
       }
 
