--- a/product-view.html
+++ b/product-view.html
@@ -105,57 +105,19 @@
 
     };
 
-    function getQueryParam(param) {
-      const urlParams = new URLSearchParams(window.location.search);
-      return urlParams.get(param);
-    }
+    const params = new URLSearchParams(window.location.search);
+    const key = params.get('product');
+    const product = products[key];
 
-    function loadProduct() {
-      const productKey = getQueryParam("product") || "minimalist-watch";
-      const product = products[productKey];
-      if (!product) return;
-
+    if (product) {
       document.getElementById("product-title").textContent = product.title;
-      document.getElementById("product-price").textContent = ₹${product.price};
-      document.getElementById("product-description").textContent = product.description;
-      document.getElementById("product-category").textContent = product.category;
-      document.getElementById("product-sku").textContent = product.sku;
-      document.getElementById("product-availability").textContent = product.availability;
-
-      const image = document.createElement("img");
-      image.src = product.image;
-      image.alt = product.title;
-      image.className = "single-product-image";
-      document.getElementById("product-image").appendChild(image);
-
-      // Add to cart handler
-      const form = document.getElementById("add-to-cart-form");
-      form.addEventListener("submit", function (e) {
-        e.preventDefault();
-        const quantity = parseInt(document.getElementById("quantity").value);
-        const cart = JSON.parse(localStorage.getItem("cart")) || [];
-
-        const existingIndex = cart.findIndex(item => item.sku === product.sku);
-        if (existingIndex >= 0) {
-          cart[existingIndex].quantity += quantity;
-        } else {
-          cart.push({
-            title: product.title,
-            price: product.price,
-            quantity: quantity,
-            sku: product.sku,
-            image: product.image
-          });
-        }
-
-        localStorage.setItem("cart", JSON.stringify(cart));
-        alert("Added to cart successfully!");
-      });
+      document.getElementById("product-price").textContent = product.price;
+      document.getElementById("product-img").src = product.img;
+      document.getElementById("product-img").alt = product.title;
+      document.getElementById("product-description").textContent = product.desc;
+    } else {
+      document.querySelector(".product-detail-container").innerHTML = "<p style='color:white'>Product not found.</p>";
     }
-
-    window.onload = loadProduct;
   </script>
-
-  <script src="js/main.js"></script>
 </body>
 </html>
