--- a/product-view.html
+++ b/product-view.html
@@ -96,15 +96,17 @@
         availability: "In Stock",
         image: "assets/icons/modern-lamp.jpg"
       },
-      "beauty-kit": {
-        title: "Glow Beauty Kit",
-        price: "$79",
+      "beauty": {
+        title: "Deluxe Beauty Kit",
+        price: 99,
         description: "A complete beauty set to rejuvenate your skin naturally.",
         category: "Beauty",
         sku: "BK-004",
         availability: "In Stock",
         image: "assets/icons/beauty.jpg"
       }
+
+
     };
 
     const params = new URLSearchParams(window.location.search);
