--- a/cart.html
+++ b/cart.html
@@ -34,7 +34,7 @@
     </div>
 
     <div class="cart-summary">
-      <h2 id="cart-total">Total: ₹0</h2>
+      <h2 id="cart-total">Total: $0</h2>
       <a href="checkout.html" class="btn-checkout">Proceed to Checkout</a>
     </div>
   </section>
@@ -59,7 +59,7 @@
 
       if (cart.length === 0) {
         cartContainer.innerHTML = "<p>Your cart is empty.</p>";
-        cartTotalElement.textContent = "Total: ₹0";
+        cartTotalElement.textContent = "Total: $0";
         return;
       }
 
@@ -73,7 +73,7 @@
           <img src="${item.image}" alt="${item.title}" />
           <div class="item-details">
             <h3>${item.title}</h3>
-            <p class="price">Price: ₹${item.price}</p>
+            <p class="price">Price: $${item.price}</p>
             <label>
               Qty:
               <input type="number" min="1" value="${item.quantity}" class="quantity-input" data-index="${index}" />
@@ -85,7 +85,7 @@
         cartContainer.appendChild(itemDiv);
       });
 
-      cartTotalElement.textContent = `Total: ₹${total.toFixed(2)}`;
+      cartTotalElement.textContent = `Total: $${total.toFixed(2)}`;
 
       attachCartEvents(cart);
     }
