--- a/checkout.html
+++ b/checkout.html
@@ -114,7 +114,7 @@
 
       alert(
         `Thank you for your order, ${fullName}!\n` +
-        `Total Amount: ₹${total}\n` +
+        `Total Amount: $${total}\n` +
         `Shipping to:\n${address}\n` +
         `We will contact you at ${email} or ${phone}.`
       );
